--- a/gestion/index.html
+++ b/gestion/index.html
@@ -6,15 +6,13 @@
     <title>Gestión - GastroSat</title>
 
     <link rel="stylesheet" href="css/styles.css">
-                <!-- Firebase SDK (antes de firebase.js) -->
-<script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
 
-<!-- Archivo de Firebase -->
-<script src="js/firebase.js" defer></script>
+    <!-- Firebase SDKs (antes de firebase.js) -->
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
 
-    <!-- Firebase y lógica central -->
+    <!-- Firebase y lógica central (se carga una sola vez) -->
     <script src="js/firebase.js" defer></script>
     <script src="js/gestion.js" defer></script>
 </head>
