--- a/gestion/index.html
+++ b/gestion/index.html
@@ -51,10 +51,9 @@
         verificarAutenticacion();
     });
 
-    // Hacer que el botón de logout funcione correctamente
+    // Asegurar que `logout` sea accesible globalmente
     window.logout = logout;
 </script>
-
 
 <body>
 
